# rust_example

./: .gitignore  README.md
helloworld/: Cargo.toml  (+1 more)
learn_crate/learn_crate2/: Cargo.toml  README.md
learn_crate/learn_crate2/mylib/: Cargo.toml
learn_crate/learn_crate2/src/: main.rs
practice/: Cargo.toml  readme.md
practice/helloword/: Cargo.toml
practice/helloword/src/: main.rs
practice/helloword2/: Cargo.toml
practice/helloword2/src/: main.rs
practice/r10box/: Cargo.toml
practice/r10box/src/: main.rs
practice/r11cell/: Cargo.toml
practice/r11cell/src/: circle_ref1.rs  lib.rs  m2.rs
practice/r12thread/: Cargo.toml
practice/r12thread/src/: lib.rs
practice/r13channel/: Cargo.toml
practice/r13channel/channel_t/: Cargo.toml
practice/r13channel/src/: lib.rs
practice/r14condlock/: Cargo.toml
practice/r14condlock/src/: lib.rs
practice/r15error/: Cargo.toml
practice/r15error/src/: lib.rs
practice/r16rawpointer/: Cargo.toml  raw_pointer.md
practice/r16rawpointer/src/: lib.rs
practice/r17macro/: Cargo.toml  readme.md
practice/r17macro/hello_macro_derive/: Cargo.toml
practice/r17macro/src/: lib.rs  main.rs
practice/r18async/: Cargo.toml
practice/r18async/src/: lib.rs
practice/r18pin/: Cargo.toml
practice/r18pin/src/: main.rs
practice/r19future/: Cargo.toml
practice/r19future/src/: main.rs
practice/r19future/timer_future/: Cargo.toml
practice/r2result/: Cargo.toml
practice/r2result/src/: lib.rs
practice/r3array/: Cargo.toml
practice/r3array/src/: array_t.rs  main.rs
practice/r4match/: Cargo.toml
practice/r4match/src/: main.rs
practice/r5method/: Cargo.toml
practice/r5method/src/: main.rs
practice/r5ownship/: Cargo.toml
practice/r5ownship/src/: lib.rs
practice/r6generic/: Cargo.toml  readme.md
practice/r6generic/src/: main.rs
practice/r7trait/: Cargo.toml
practice/r7trait/src/: main.rs
practice/r8lifetime/: Cargo.toml
practice/r8lifetime/src/: main.rs
practice/r8selfref/: Cargo.toml
practice/r9iterator/: Cargo.toml
practice/r9iterator/src/: main.rs
z_2_0_trait/: Cargo.toml  self.rs  self2.rs
z_2_0_trait/src/: main.rs
z_z_postgresql/: Cargo.toml
z_z_postgresql/src/: main.rs  psqlx_fn.rs
(+208 files in other folders)
