[workspace]
members =[
  "helloword",
  "helloword2",
  "r2result",
  "r3struct1",
  "r3array",
  "r4match",
  "r5method",
  "r5ownship",
  "r6generic",
  "r7trait",
  "r8lifetime",
  "r8selfref",
  "r9iterator",
  "r10box",
  "r11cell",
  "r12thread",
  "r13channel",
  "r14condlock",
  "r15error",
  "r16rawpointer",
  "r17macro",
  "r18async"
]
