[package]
name = "z_2_trait"
version = "0.1.0"
authors = ["lpxxn <mi_duo@live.com>"]
edition = "2018"
# 加上个default-run就能直接 cargo run
default-run = "z_2_trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo run --bin self_demo
[[bin]]
name = "self_demo"
path = "./self.rs"

# cargo run --bin self_demo2
[[bin]]
name = "self_demo2"
path = "./self2.rs"

[dependencies]
