[package]
name = "learn_crate2"
version = "0.1.0"
authors = ["lpxxn <mi_duo@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mylib = {path = "./mylib"}

# https://doc.rust-lang.org/rust-by-example/cargo/deps.html
# clap = "2.27.1" # from crates.io
# rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
# bar = { path = "../bar" } # from a path in the local filesystem